code/force-app/main/default/objects/omnistudio__TestResult__c/fields/omnistudio__Status__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Run</fullName>
                <default>true</default>
                <label>Not Run</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Invalid Test Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>