code/force-app/main/default/objects/omnistudio__TestResult__c/fields/omnistudio__TestName__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__TestName__c</fullName>
    <label>Test Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>