code/force-app/main/default/objects/omnistudio__TestResult__c/fields/omnistudio__TestSuiteUniqueKey__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__TestSuiteUniqueKey__c</fullName>
    <label>Test Suite Unique Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>